[package]
name = "rustgistry"
version = "0.1.0"
edition = "2021"
categories = ["api-bindings", "authentication", "database", "filesystem", "network-programming"]
description = "Docker Registry server library"
homepage = "https://github.com/quantumsheep/rustgistry"
keywords = ["docker", "registry"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/quantumsheep/rustgistry"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rustgistry"
path = "src/lib/lib.rs"

[[bin]]
name = "rustgistry"
path = "src/bin.rs"

[dependencies]
async-trait = "0.1.58"
axum = { version = "0.5.17", features = ["headers"] }
base64 = "0.13.1"
bytes = "1.3.0"
clap = { version = "4.0.27", features = ["derive"] }
futures = "0.3.25"
hex = "0.4.3"
hyper = { version = "0.14.23", features = ["full"] }
lazy_static = "1.4.0"
rand = { version = "0.8.5", features = ["std_rng"] }
rusoto_core = "0.48.0"
rusoto_s3 = "0.48.0"
rusoto_sqs = "0.48.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
sha2 = "0.10.6"
sync_wrapper = "0.1.1"
tempfile = "3.3.0"
tokio = { version = "1.22.0", features = ["full", "macros"] }
tokio-util = "0.7.4"
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["trace", "map-request-body", "util"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
